# gigaragas

./: README.md  pyproject.toml
src/ragas/: __init__.py  evaluation.py
src/ragas/metrics/: _context_recall.py  _faithfulness.py  _faithfulness_ru.py
