[project]
name = "gigaragas"
dependencies = [
    "numpy",
    "datasets",
    "tiktoken",
    "gigachain<0.3",
    "gigachain-core<0.3",
    "gigachain-community",
    "gigachain-openai",
    "openai>1",
    "pysbd>=0.3.4",
    "nest-asyncio",
    "appdirs",
    "nltk",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
all = [
    "sentence-transformers",
    "transformers",
    "rouge_score",
    "rapidfuzz",
    "pandas",
    "datacompy",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings[python]",
    "mkdocs-glightbox",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-git-committers-plugin-2",
    "mkdocs-git-revision-date-localized-plugin",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "ragas.__version__"}
readme = {file = ["README.md"], content-type = "text/plain"}

[tool.ruff]
exclude = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-n 4"
asyncio_default_fixture_loop_scope = "function"